# coatc

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  fixme_dump.hpp  lexer.cpp  lexer.hpp  lib.hpp  llvm_codegen.cpp  llvm_codegen.hpp  main.cpp  message_strings.hpp  parser.cpp  parser.hpp
source/LLVMCodeGen/: cleanup_pass.cpp  cleanup_pass.hpp  codegen.cpp  external_linking.cpp  external_linking.hpp  lowering.cpp  lowering.hpp  optimization.cpp  optimization.hpp
test/: CMakeLists.txt
test/code_samples/: test1.bpl  test1.bpl.ll  tmptest.bpl
test/llir_out/: test1.bpl.ll
test/llvmir_out/: test1.bpl.ll  test1.bpl.out  testo0.bc  testo0.ll  testo1.ll  testo2.ll  tmptest.bpl.ll
test/source/: compiler_test.cpp
